# pytexas-meetup0923-best-practices

./: .gitignore  LICENSE  OUTLINE.md  README.md  SLIDES.md  mkdocs.yml  pyproject.toml  slides.md
.github/workflows/: main.yaml  manual.yaml
docs/: 1_who.md  2_design.md  2_design_rules.md  3_code_design.md  3_style.md  4_code_design.md  4_documentation.md  5_in_code_documentation.md  6_supplemental_documentation.md  index.md
